--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@
 }
 
 @font-face {
-    font-family: 'Lato';
+    font-family: 'Roboto';
     src: url('../fonts/Lato-Regular.ttf') format('truetype'),
         url('../fonts/Lato-Bold.ttf') format('truetype');
     font-weight: normal;
@@ -59,7 +59,7 @@ html {
 
 body {
     background-color: var(--md-sys-color-background);
-    font-family: "Lato", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 main {
