--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,8 @@ header {
     display: block;
     inline-size: 100%;
     inset-block-start: 0;
+    z-index: 2;
+    background-color: var(--md-sys-color-background);
 }
 
 header a {
@@ -138,7 +140,8 @@ header a {
     border-radius: 50%;
 }
 
-carousel-component {
+carousel-component,
+app-details {
     padding: 20px;
     margin-block: 40px;
 }
